--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "php": ">=5.4.0",
-        "twig/twig": "^1.14"
+        "twig/twig": "^1.14|^2.0"
     },
     "require-dev": {
         "symfony/framework-bundle": "^2.3",
