--- a/.travis.yml
+++ b/.travis.yml
@@ -3,17 +3,20 @@ language: php
 matrix:
   fast_finish: true
   include:
-    - php: 5.4
-      env: COMPOSER_FLAGS="--prefer-lowest"
-    - php: 5.4
-    - php: 5.5
     - php: 5.6
-    - php: 7
+      env: COMPOSER_FLAGS="--prefer-lowest"
+    - php: 5.6
+    - php: 7.0
+    - php: 7.1
     - php: hhvm
+    - php: nightly
+  allow_failures:
+    - php: hhvm
+    - php: nightly
 
-before_script:
+install:
   - composer update --prefer-dist --no-interaction $COMPOSER_FLAGS
-script: phpunit --coverage-clover=coverage.clover
+script: vendor/bin/phpunit --coverage-clover=coverage.clover
 after_script:
   - wget https://scrutinizer-ci.com/ocular.phar
   - php ocular.phar code-coverage:upload --format=php-clover coverage.clover
