--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
         "psr-4": { "Ajgl\\Twig\\Extension\\Tests\\": "tests/" }
     },
     "require": {
-        "php": ">=5.4.0",
-        "twig/twig": "^1.14"
+        "php": ">=5.6",
+        "twig/twig": "^1.14|^2.0"
     },
     "require-dev": {
-        "symfony/framework-bundle": "^2.3",
-        "symfony/twig-bundle": "^2.3"
+        "symfony/framework-bundle": "^2.7|^3.2",
+        "symfony/twig-bundle": "^2.7|^3.2",
+        "phpunit/phpunit": "^5"
     },
     "suggest": {
         "ext-xdebug": "The Xdebug extension is required for the breakpoint to work",
@@ -33,7 +34,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "0.4.x-dev"
+            "dev-master": "0.3.x-dev"
         }
     }
 }
