--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "require-dev": {
         "symfony/framework-bundle": "^2.7|^3.2|^4.1",
         "symfony/twig-bundle": "^2.7|^3.2|^4.1",
-        "phpunit/phpunit": "^5"
+        "symfony/phpunit-bridge": "^3.4|^4.1"
     },
     "suggest": {
         "ext-xdebug": "The Xdebug extension is required for the breakpoint to work",
@@ -33,7 +33,7 @@
         "symfony/twig-bundle": "The twig bundle to integrate the extension into Symfony"
     },
     "scripts": {
-        "phpunit": "vendor/bin/phpunit --colors=always",
+        "phpunit": "vendor/bin/simple-phpunit --colors=always",
         "test": [
             "@phpunit"
         ]
