--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
     fast_finish: true
     include:
           # Minimum supported dependencies with the latest and oldest PHP version
-        - php: 7.2
+        - php: 7.3
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
         - php: 5.6
           env: COMPOSER_FLAGS="--prefer-stable --prefer-lowest" SYMFONY_DEPRECATIONS_HELPER="weak_vendors"
@@ -24,17 +24,20 @@ matrix:
         - php: 7.0
         - php: 7.1
         - php: 7.2
+        - php: 7.3
           env: COVERAGE=true PHPUNIT_FLAGS="-v --coverage-text"
 
           # Test LTS versions. This makes sure we do not use Symfony packages with version greater
           # than 2 or 3 respectively. Read more at https://github.com/symfony/lts
-        - php: 7.2
+        - php: 7.3
           env: DEPENDENCIES="symfony/lts:^2"
-        - php: 7.2
+        - php: 7.3
           env: DEPENDENCIES="symfony/lts:^3"
 
           # Latest commit to master
-        - php: 7.2
+        - php: 7.3
+          env: STABILITY="dev"
+        - php: nightly
           env: STABILITY="dev"
 
     allow_failures:
