--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ matrix:
           # Latest commit to master
         - php: 7.3
           env: STABILITY="dev"
+        - php: 7.4
+          env: STABILITY="dev"
         - php: nightly
           env: STABILITY="dev"
 
