--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     },
     "require": {
         "php": ">=5.6",
-        "twig/twig": "^1.14|^2.0"
+        "twig/twig": "^1.34|^2.0|^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^2.18",
