--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -11,11 +11,11 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php: ['5.6', '7.0', '7.1', '7.2', '7.3', '7.4', '8.0']
+        php: ['7.4', '8.0', '8.1', '8.2']
         stability: ['prefer-lowest', 'prefer-stable']
         allow_failure: [false]
         include:
-          - php: '8.0'
+          - php: '8.2'
             stability: 'dev'
             allow_failure: true
 
