--- a/composer.json
+++ b/composer.json
@@ -20,11 +20,11 @@
     },
     "require": {
         "php": ">=7.4",
-        "twig/twig": "^1.34|^2.0|^3.0"
+        "twig/twig": "^2.15.3|^3.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "^3.13",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit": "^9.5.6",
         "symfony/framework-bundle": "^4.4|^5.4|^6.0",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/twig-bundle": "^4.4|^5.4|^6.0"
