--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -42,6 +42,8 @@ jobs:
 
       - name: Check coding standard
         run: composer lint
+        continue-on-error: true
+        if: ${{ matrix.php == '8.1' }}
 
       - name: Execute tests
         run: composer test || ${{ matrix.allow_failure }}
