--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,9 @@
         "composer/xdebug-handler": "^2.0 || ^3.0",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpunit/phpunit": "^9.5.6",
-        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.0",
-        "symfony/phpunit-bridge": "^6.2",
-        "symfony/twig-bundle": "^4.4 || ^5.4 || ^6.0"
+        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.3 || ^7.0",
+        "symfony/phpunit-bridge": ">=7.0",
+        "symfony/twig-bundle": "^4.4 || ^5.4 || ^6.3 || ^7.0"
     },
     "conflict": {
         "composer/xdebug-handler": "<2.0",
