--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,12 +13,12 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["7.4", "8.0", "8.1", "8.2", "8.3"]
+                php: ["8.2", "8.3"]
                 dependency-versions: ["highest"]
                 composer-stable: ["1"]
                 continue-on-error: [false]
                 include:
-                    - php: "7.4"
+                    - php: "8.2"
                       dependency-versions: "lowest"
                       composer-stable: "1"
                       continue-on-error: false
