--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         "composer/xdebug-handler": "^2.0 || ^3.0",
         "friendsofphp/php-cs-fixer": "^3.13",
         "phpunit/phpunit": "^9.5.6",
-        "symfony/framework-bundle": "^4.4 || ^5.4 || ^6.3 || ^7.0",
-        "symfony/phpunit-bridge": ">=7.0",
-        "symfony/twig-bundle": "^4.4 || ^5.4 || ^6.3 || ^7.0"
+        "symfony/framework-bundle": "^5.4 || ^6.4 || ^7.3",
+        "symfony/phpunit-bridge": "^7.3",
+        "symfony/twig-bundle": "^5.4 || ^6.4 || ^7.3"
     },
     "conflict": {
         "composer/xdebug-handler": "<2.0",
-        "symfony/framework-bundle": "<4.4",
-        "symfony/twig-bundle": "<4.4"
+        "symfony/framework-bundle": "<5.4",
+        "symfony/twig-bundle": "<5.4"
     },
     "suggest": {
         "ext-xdebug": "The Xdebug extension is required for the breakpoint to work",
