--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -13,7 +13,7 @@ jobs:
         strategy:
             fail-fast: false
             matrix:
-                php: ["8.2", "8.3"]
+                php: ["8.2", "8.3", "8.4", "8.5"]
                 dependency-versions: ["highest"]
                 composer-stable: ["1"]
                 continue-on-error: [false]
@@ -22,7 +22,7 @@ jobs:
                       dependency-versions: "lowest"
                       composer-stable: "1"
                       continue-on-error: false
-                    - php: "8.3"
+                    - php: "latest"
                       composer-flags: ''
                       continue-on-error: true
 
