--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -14,19 +14,27 @@ jobs:
             fail-fast: false
             matrix:
                 php: ["8.2", "8.3", "8.4", "8.5"]
+                symfony: ["5.4.*", "6.4.*", "7.3.*", "7.4.*", "8.0.*"]
                 dependency-versions: ["highest"]
                 composer-stable: ["1"]
                 continue-on-error: [false]
                 include:
                     - php: "8.2"
+                      symfony: "5.4.*"
                       dependency-versions: "lowest"
                       composer-stable: "1"
                       continue-on-error: false
                     - php: "latest"
+                      symfony: "8.1.*"
                       composer-flags: ''
                       continue-on-error: true
+                exclude:
+                    - php: "8.2"
+                      symfony: "8.0.*"
+                    - php: "8.3"
+                      symfony: "8.0.*"
 
-        name: "PHP ${{ matrix.php }} - Composer ${{ matrix.dependency-versions }}"
+        name: "PHP ${{ matrix.php }} - Symfony ${{ matrix.symfony }} - Composer ${{ matrix.dependency-versions }}"
 
         steps:
             - name: "checkout"
@@ -36,14 +44,18 @@ jobs:
               uses: "shivammathur/setup-php@v2"
               with:
                 php-version: "${{ matrix.php }}"
-                tools: "composer"
+                tools: "composer,flex"
+
+            - name: "enable Symfony Flex plugin"
+              run: "composer global config --no-interaction allow-plugins.symfony/flex true"
 
             - name: "install composer dependencies"
               uses: "ramsey/composer-install@v3"
               env:
                 COMPOSER_PREFER_STABLE: "${{ matrix.composer-stable }}"
+                SYMFONY_REQUIRE: "${{ matrix.symfony }}"
               with:
                 dependency-versions: "${{ matrix.dependency-versions }}"
 
-            - name: "run unit tests"
-              run: "vendor/bin/simple-phpunit --colors=always"
+            - name: "run phpunit tests"
+              run: "vendor/bin/phpunit --colors=always"
