--- a/composer.json
+++ b/composer.json
@@ -25,9 +25,8 @@
     "require-dev": {
         "composer/xdebug-handler": "^3.0",
         "friendsofphp/php-cs-fixer": "^3.13",
-        "phpunit/phpunit": "^9.5.6",
+        "phpunit/phpunit": "^11.5 || ^12.5",
         "symfony/framework-bundle": "^5.4 || ^6.4 || ^7.3",
-        "symfony/phpunit-bridge": "^7.3",
         "symfony/twig-bundle": "^5.4 || ^6.4 || ^7.3"
     },
     "conflict": {
